--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -2,6 +2,9 @@
 // Body
 $body-bg: #f5f8fa;
 
+/* Google fonts */
+$primary-font: 'Open Sans', sans-serif;
+
 // Typography
 $font-family-sans-serif: "Raleway", sans-serif;
 $font-size-base: 0.9rem;
@@ -11,11 +14,11 @@ $line-height-base: 1.6;
 $primary-color: #fff;
 $secondary-color: #f1f1f1;
 //$tertiary-color: #000;
-$icon-color: #3a3a3a;
+$icon-color: #333333;
 $ash-shadow: #a3a3a3;
 $primary-btn: #ef294a;
 $pink-shadow: #d01e3c;
-$boder-color: #ececec;
+$boder-color: #e3e3e3;
 
 /* Color name declaration */
 $white: $primary-color;
@@ -30,3 +33,4 @@ $facebook: #3b5998;
 $twitter: #1da1f2;
 $youtube: #ff0000;
 $linkedin: #007bb5;
+
