--- a/resources/assets/sass/home.scss
+++ b/resources/assets/sass/home.scss
@@ -6,15 +6,17 @@
 
 /* Bootstrap customization */
 .edutube-navbar-brand {
+  font-family: $primary-font;
   font-weight: bold;
-  font-size: 18px !important;
-  letter-spacing: 1px;
+  font-size: 24px !important;
+  color: #333 !important;
 }
 
 .navbar-nav {
   .nav-item {
     .nav-link {
-      font-size: 13px;
+      font-family: $primary-font !important;
+      font-size: 14px;
       color: $icon-color !important;
     }
   }
@@ -39,7 +41,7 @@
     border: solid 2px $boder-color;
     background: $secondary-color;
     border-radius: 4px;
-    padding: 6px 40px 6px 15px;
+    padding: 8px 40px 8px 15px;
     outline: none;
     font-size: 11px;
     &:hover {
@@ -77,6 +79,18 @@
 
 
 /* Slider design */
+//#myCarousel {
+//  position: relative;
+//  .slider-ovarlay {
+//    position: absolute;
+//    left: 0;
+//    right: 0;
+//    top: 0;
+//    bottom: 0;
+//    background-color: #000;
+//    color: #000;
+//  }
+//}
 .carousel-inner {
   max-height: 450px;
   .carousel-item {
@@ -87,7 +101,8 @@
       right: 0;
       top: 35%;
       h5 {
-        font-size: 25px;
+        font-family: $primary-font;
+        font-size: 30px;
       }
     }
   }
@@ -137,12 +152,14 @@
   .item-text {
     float: left;
     h4 {
+      font-family: $primary-font;
       margin-bottom: 0;
-      font-size: 15px;
+      font-size: 16px;
       font-weight: bold;
     }
     p {
-      font-size: 13px;
+      font-family: $primary-font;
+      font-size: 14px;
     }
   }
 }
@@ -160,18 +177,21 @@
       padding-bottom: 35px;
       min-height: 310px;
       h4 {
+        font-family: $primary-font;
         font-weight: bold;
-        color: #323232;
-        font-size: 22px;
+        color: $icon-color;
+        font-size: 20px;
       }
       h5 {
+        font-family: $primary-btn;
         font-size: 16px;
-        color: #3e3e3e;
+        color: $icon-color;
       }
       p {
-        color: #3e3e3e;
-        font-size: 13px;
-        line-height: 15px;
+        font-family: $primary-font;
+        color: $icon-color;
+        font-size: 14px;
+        line-height: 16px;
       }
     }
     .right-col {
@@ -199,12 +219,14 @@
         box-shadow: 0px 2px 3px #ddd;
         box-shadow: 0px 2px 3px #ddd;
         h2 {
+          font-family: $primary-font;
           font-size: 18px;
           font-weight: bold;
         }
         p {
+          font-family: $primary-font;
           font-size: 14px;
-          color: #3e3e3e;
+          color: $icon-color;
           min-height: 50px;
         }
       }
@@ -221,26 +243,29 @@
     border-radius: 3px;
     padding: 40px 200px;
     h2 {
+      font-family: $primary-font;
       font-size: 18px;
       font-weight: bold;
     }
     p {
+      font-family: $primary-font;
       font-size: 14px;
-      color: #3e3e3e;
+      color: $icon-color;
     }
   }
 }
 
 #become-tutor-section {
   padding: 60px 75px;
-  background-image: url('/images/slider2.jpg');
+  background-image: url('/images/bg-1.jpg');
   background-repeat: no-repeat;
   background-position: center;
-  color: #ffffff;
+  color: $white;
   h2 {
 
   }
   p {
+    font-family: $primary-font;
     font-size: 14px;
   }
 }
@@ -248,6 +273,7 @@
 #help-center-section {
   padding: 60px 75px;
   p {
+    font-family: $primary-font;
     font-size: 14px;
   }
 }
@@ -259,12 +285,19 @@
 #community-section {
   border-top: solid 1px $secondary-color;
   padding: 60px 75px;
+  h2 {
+    font-family: $primary-font;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+  }
   .slider-items {
     .slider-item {
       padding: 20px 30px;
     }
   }
   p {
+    font-family: $primary-font;
      font-size: 14px;
      text-align: center;
   }
@@ -277,6 +310,7 @@
     overflow: hidden;
     margin: auto;
     .avatar {
+      //background: image-url('images/newaj.jpg');
       width: 50px;
       border-radius: 100%;
       padding: 10px;
@@ -285,11 +319,14 @@
       background: #ffffff;
     } 
     .information {
+      font-family: $primary-font;
       text-align: center;
-      font-size: 13px;
+      font-size: 12px;
+      padding-top: 5px;
       h4 {
+        font-family: $primary-font;
         margin-bottom: 4px;
-        font-size: 16px;
+        font-size: 14px;
       }
     }
   }
@@ -412,16 +449,19 @@ label {
       .footer-col {
         .edutube {
           h3 {
+            font-family: $primary-font;
             font-size: 16px;
             font-weight: bold;
           }
           p {
+            font-family: $primary-font;
             font-size: 12px;
-            color: #3e3e3e;
+            color: $icon-color;
           }
         }
         .get-to-know, .learn, .partner {
           h4 {
+            font-family: $primary-font;
             font-size: 14px;
             font-weight: bold;
           }
@@ -433,7 +473,7 @@ label {
               a {
                 display: inline-block;
                 cursor: pointer;
-                color: #3e3e3e;
+                color: #5c5c5c;
                 font-size: 12px;
                 margin-bottom: 10px;
                 &:hover {
@@ -451,8 +491,9 @@ label {
     padding: 6px 20px;
     .left-section {
       float: left;
-      color: #999999;
-      font-size: 13px;
+      color: #808080;
+      font-family: $primary-font;
+      font-size: 12px;
       padding-top: 4px;
     }
     .right-section {
@@ -467,10 +508,11 @@ label {
           display: inline-block;
           a {
             position: relative;
-            color: #999999;
+            color: #808080;
             text-decoration: none;
             padding: 4px;
-            font-size: 13px;
+            font-family: $primary-font;
+            font-size: 12px;
             &:hover {
               text-decoration: none;
             }
@@ -508,13 +550,15 @@ label {
         padding-bottom: 35px;
         min-height: 310px;
         h4 {
+          font-family: $primary-font;
           padding-top: 25px;
           font-size: 16px;
           font-weight: bold;
         }
         p {
+          font-family: $primary-font;
           font-size: 14px;
-          color: #3e3e3e;
+          color: $icon-color;
           margin-bottom: 30px;
         }
         a {}
@@ -524,8 +568,10 @@ label {
         padding: inherit;
         border-left: 1px solid #ddd;
         h3 {
-          font-size: 18px;
+          font-family: $primary-font;
+          font-size: 22px;
           font-weight: bold;
+          text-transform: uppercase;
           padding: 20px 30px;
           margin: 0;
         }
@@ -549,11 +595,13 @@ label {
               .item-content {
                 padding-left: 55px;
                 h5 {
-                  font-size: 13px;
+                  font-family: $primary-font;
+                  font-size: 14px;
                   font-weight: bold;
                 }
                 p {
-                  font-size: 13px;
+                  font-family: $primary-font;
+                  font-size: 12px;
                   margin-bottom: 10px;
                 }
                 ul {
@@ -574,6 +622,7 @@ label {
                       padding: 2px 20px;
                       background-color: $secondary-color;
                       border-radius: 15px;
+                      font-family: $primary-font;
                       font-size: 12px;
                       color: $icon-color;
                     }
@@ -586,8 +635,9 @@ label {
         .see-all {
           padding: 15px 30px;
           a {
-            color: $primary-btn;
+            color: $pink;
             cursor: pointer;
+            font-family: $primary-font;
             font-size: 14px;
             &:hover {
               text-decoration: underline;
