design profile page and some material design

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -6,6 +6,9 @@
 @import "variables";
 @import "home";
 @import "public";
+@import "profile";
+@import "input";
+@import "utility";
 
 .navbar-laravel {
   background-color: #fff;
