--- a/resources/assets/sass/public.scss
+++ b/resources/assets/sass/public.scss
@@ -167,3 +167,11 @@
 .validation-error {
   color: red;
 }
+
+.mr-auto {
+  margin: auto !important;
+}
+
+.edu-font-sx {
+  font-size: 11px !important;
+}
